Actividad de IMC añadida.
Falta una actividad.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="SplashTamaño">20dp</dimen>
+    <dimen name="TamañoIMC">25dp</dimen>
 </resources>
